# python

./: .gitignore  README.md
Mod00/ex1/: ft_plot_area.py
Mod00/ex2/: ft_harvest_total.py
Mod00/ex6/: ft_garden_summary.py
Mod01/ex0/: ft_garden_intro.py
Mod01/ex1/: ft_garden_data.py
Mod01/ex2/: ft_plant_growth.py
Mod01/ex3/: ft_plant_factory.py
Mod01/ex4/: ft_garden_security.py
Mod01/ex5/: ft_plant_types.py
Mod01/ex6/: ft_garden_analytics.py
Mod02/ex0/: ft_first_exception.py
Mod02/ex1/: ft_different_errors.py  ft_raise_exception.py
Mod02/ex2/: ft_custom_errors.py  ft_different_errors.py
Mod02/ex3/: ft_custom_errors.py  ft_finally_block.py
Mod02/ex4/: ft_finally_block.py  ft_raise_errors.py
Mod02/ex5/: ft_garden_management.py
Mod03/ex0/: ft_command_quest.py
Mod03/ex1/: ft_score_analytics.py
Mod03/ex2/: ft_coordinate_system.py
Mod03/ex3/: ft_achievement_tracker.py
Mod03/ex4/: ft_inventory_system.py
Mod03/ex5/: ft_data_stream.py
Mod03/ex6/: ft_analytics_dashboard.py  ft_data_alchemist.py
Mod04/ex0/: ft_ancient_text.py
Mod04/ex1/: ft_archive_creation.py
matrix_venv/: pyvenv.cfg
python_module_04/: sample_data.json
python_module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python_module_07/: battle.py  capacitor.py  tournament.py
python_module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+59 files in other folders)
